RESOLVED FIXED199192
[iOS] Occasional crash under -[UIPreviewTarget initWithContainer:center:transform:] when generating a drag preview
https://bugs.webkit.org/show_bug.cgi?id=199192
Summary [iOS] Occasional crash under -[UIPreviewTarget initWithContainer:center:trans...
Wenson Hsieh
Reported 2019-06-25 10:00:34 PDT
Attachments
Patch (16.05 KB, patch)
2019-06-25 10:54 PDT, Wenson Hsieh
no flags
Tweak ChangeLog wording (16.09 KB, patch)
2019-06-25 10:56 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-06-25 10:54:12 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2019-06-25 10:56:18 PDT
Created attachment 372845 [details] Tweak ChangeLog wording
WebKit Commit Bot
Comment 3 2019-06-25 11:48:31 PDT
Comment on attachment 372845 [details] Tweak ChangeLog wording Clearing flags on attachment: 372845 Committed r246800: <https://trac.webkit.org/changeset/246800>
WebKit Commit Bot
Comment 4 2019-06-25 11:48:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.